<resources>
    <string name="app_name">TVBase</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_movies">Filmes</string>
    <string name="menu_series">Séries</string>
    <string name="menu_customLists">Listas Personalizadas</string>
    <string name="menu_config">Configurações</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_movies">Movies</string>
    <string name="title_series">TV Shows</string>
    <string name="title_customLists">Custom Lists</string>
    <string name="title_search">Search</string>
    <string name="title_settings">Settings</string>

    <string name="trending">TRENDING</string>
    <string name="watchlist">WATCHLIST</string>
    <string name="watched">WATCHED</string>
    <string name="add_watchlist">Add To Watchlist</string>
    <string name="add_watched">Add To Watched</string>
    <string name="rem_watchlist">Remove from Watchlist</string>
    <string name="rem_watched">Remove from Watched</string>
    <string name="emptyCustomLists">Your custom list is empty</string>
</resources>