<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/baseline_theaters_24"
            android:title="@string/title_movies"/>

    <item
            android:id="@+id/navigation_dashboard"
            android:icon="@drawable/baseline_live_tv_24"
            android:title="@string/title_series"/>

    <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/baseline_playlist_add_24"
            android:title="@string/title_customLists"/>

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/title_search"/>

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/baseline_more_horiz_24"
        android:title="@string/title_settings"/>

</menu>